@startuml dataModel_v5

' ENUMS
enum CoinValue {
    ONE_CENT,
    TWO_CENTS,
    FIVE_CENTS,
    TEN_CENTS,
    TWENTY_CENTS,
    FIFTY_CENTS,
    ONE_EURO,
    TWO_EUROS
}

enum CoinCountry {
    AUSTRIA, 
    BELGIUM, 
    CYPRUS, 
    GERMANY, 
    ESTONIA, 
    SPAIN, 
    FINLAND, 
    FRANCE,
    GREECE, 
    IRELAND, 
    ITALY, 
    LITHUANIA, 
    LUXEMBOURG, 
    LATVIA, 
    MALTA,
    NETHERLANDS, 
    PORTUGAL, 
    SLOVENIA, 
    SLOVAKIA, 
    SAN_MARINO, 
    VATICAN_CITY,
    MONACO, 
    ANDORRA
}

enum Mint {
    BERLIN, 
    MUNICH, 
    STUTTGART, 
    KARLSRUHE, 
    HAMBURG
}

' DESCRIPTION
class CoinDescription {
    - text : String
}

' INTERFACES
interface Coin {
    + getId() : String
    + getValue() : int
    + getYear() : int
    + getDescription() : String
    + setDescription(CoinDescription description) : void
    + getCollectionId() : String
}

interface CoinCollection<T : Coin> {
    + getId() : String
    + getName() : String
    + getCoins() : List<T>
    + addCoin(coin : T) : void
    + removeCoin(coin : T) : void
    + getTotalValue() : int
    + getCoinCount() : int
}

interface CollectionGroup<T : Coin, C : CoinCollection<T>> {
    + getId() : String
    + getName() : String
    + String getOwnerId();
    + getCollections() : List<C>
    + addCollection(collection : C) : void
    + removeCollection(collection : C) : void
    + getTotalCollections() : int
    + getTotalCoins() : int
    + getTotalValue() : int
}

' COIN
class EuroCoin {
    - id : String
    - year : int
    - collectionId : String
}
EuroCoin .|> Coin : implements
EuroCoin --> "1" CoinValue : -value
EuroCoin --> "1" CoinCountry : -mintCountry
EuroCoin --> "1" CoinDescription : -description
EuroCoin --> "1" Mint : -mint

' COLLECTIONS
class EuroCoinCollection {
    - id : String
    - name : String
}
EuroCoinCollection .|> CoinCollection : implements
EuroCoinCollection --> "*" EuroCoin : -coins

class EuroCoinCollectionGroup {
    - id : String
    - name : String
    - ownerId : String  'Reference to the user by ID'
}

EuroCoinCollectionGroup .|> CollectionGroup : implements
EuroCoinCollectionGroup --> "*" EuroCoinCollection : -collections

' BUILDER
class EuroCoinBuilder {
    - year : int
    - value : CoinValue
    - mintCountry : CoinCountry
    - description : CoinDescription
    - mint : Mint
    - collectionId : String

    + setYear(year : int) : EuroCoinBuilder
    + setValue(value : CoinValue) : EuroCoinBuilder
    + setMintCountry(mintCountry : CoinCountry) : EuroCoinBuilder
    + setDescription(description : CoinDescription) : EuroCoinBuilder
    + setMint(mint : Mint) : EuroCoinBuilder
    + setCollectionId(id : String) : EuroCoinBuilder
    + build() : EuroCoin
}
EuroCoinBuilder ..> EuroCoin : builds

' USER
class User {
    - id : String
    - name : String
}

@enduml
